# audio_silence_marks

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
audio_silence_marks/: __init__.py  cli.py  main.py  types.py
audio_silence_marks/targets/: audipo.py
scripts/: count-marks.sh
